// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NbaCard component renders correctly 1`] = `
<div
  class="NBACard ColorPair ColorPair--blue-900"
>
  <h4
    class="MuiTypography-root title Typography MuiTypography-h4"
  >
    H4 Heading
  </h4>
  <div
    class="body"
  >
    <div>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum nisi at turpis fringilla, non malesuada mi porta. Aliquam ut eros in libero rutrum ullamcorper.
    </div>
  </div>
</div>
`;

exports[`NbaCard component renders with footer 1`] = `
<div
  class="NBACard ColorPair ColorPair--blue-900"
>
  <h4
    class="MuiTypography-root title Typography MuiTypography-h4"
  >
    H4 Heading
  </h4>
  <div
    class="body"
  >
    <div>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam condimentum nisi at turpis fringilla, non malesuada mi porta. Aliquam ut eros in libero rutrum ullamcorper.
    </div>
  </div>
  <div
    class="footer"
  >
    <div>
      footer
    </div>
  </div>
</div>
`;
